--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,4 @@
-@font: 'Open Sans', 'Arial', sans-serif;
+@font: Arial, Helvetica, sans-serif;
 
 @color-text: #4b6373;
 @color-text--grey: #acc2d3;
