--- a/less/buttons.less
+++ b/less/buttons.less
@@ -17,6 +17,15 @@
 	user-select: none;
 	transition: all 0.3s ease;
 	box-shadow: inset 0 0 0 0 rgba(0,0,0,0.5);
+	white-space: nowrap;
+	@media (max-width: 1600px){
+		padding: 7px 14px;
+		font-size: 15px;
+	}
+	@media (max-width: 1366px){
+		padding: 6px 13px;
+		font-size: 14px;
+	}
 
 	&:focus{
 		outline: none;
@@ -78,8 +87,23 @@
 	height: 36px;
 	line-height: 36px;
 	padding: 0;
+	@media (max-width: 1600px){
+		width: 32px;
+		height: 32px;
+	}
+	@media (max-width: 1366px){
+		width: 30px;
+		height: 30px;
+	}
 
 	i{
 		line-height: 36px;
+		@media (max-width: 1600px){
+			line-height: 30px;
+		}
+		@media (max-width: 1366px){
+			line-height: 30px;
+			top: -1px;
+		}
 	}
 }
