--- a/less/footer.less
+++ b/less/footer.less
@@ -1,13 +1,17 @@
 .l-footer{
-	min-width: 1250px;
 	padding-left: 15px;
-	margin-top: 50px;
 	background-color: @color-panels;
 	color: #FFF;
 	min-height: 54px;
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
+	@media (max-width: 1600px){
+		min-height: 50px;
+	}
+	@media (max-width: 1366px){
+		min-height: 46px;
+	}
 
 	.btn{
 		margin-right: 15px;
@@ -39,6 +43,12 @@
 	text-align: center;
 	padding: 10px 40px;
 	transition: all 0.3s ease;
+	@media (max-width: 1600px){
+		padding: 8px 35px;
+	}
+	@media (max-width: 1366px){
+		padding: 6px 30px;
+	}
 
 	&:hover{
 		background-color: lighten(@color-attention,5%);
